# act06

./: README.md  pyproject.toml  test_activity.py
config/: gatorgrade.yml
src/: algorithms.py  main.py  timer.py
writing/: reflection.md
